Fixing page spacing; header color

--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -58,6 +58,10 @@ p {
     }
 }
 
+.intro a {
+    color: #fff;
+}
+
 #about p {
     font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 400;
@@ -215,6 +219,7 @@ a {
         vertical-align: middle;
         .brand-heading {
             font-size: 36px;
+            margin-bottom: 5px;
         }
         .intro-text {
             font-size: 18px;
